Rewrote Login Implementation & Updated Swagger
